#2524 TraceFactory refactoring  - extract BaseTraceFactory  - add testcase